; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavformat/extr_async.c_ring_generic_write.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavformat/extr_async.c_ring_generic_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_4__*, i8*, i32, i32 (i8*, i8*, i32)*)* @ring_generic_write to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ring_generic_write(%struct.TYPE_4__* %0, i8* %1, i32 %2, i32 (i8*, i8*, i32)* %3) #0 {
  %5 = alloca %struct.TYPE_4__*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32 (i8*, i8*, i32)*, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32 (i8*, i8*, i32)* %3, i32 (i8*, i8*, i32)** %8, align 8
  %9 = load i32, i32* %7, align 4
  %10 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %11 = call i32 @ring_space(%struct.TYPE_4__* %10)
  %12 = icmp sle i32 %9, %11
  %13 = zext i1 %12 to i32
  %14 = call i32 @av_assert2(i32 %13)
  %15 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %16 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = load i8*, i8** %6, align 8
  %19 = load i32, i32* %7, align 4
  %20 = load i32 (i8*, i8*, i32)*, i32 (i8*, i8*, i32)** %8, align 8
  %21 = call i32 @av_fifo_generic_write(i32 %17, i8* %18, i32 %19, i32 (i8*, i8*, i32)* %20)
  ret i32 %21
}

declare dso_local i32 @av_assert2(i32) #1

declare dso_local i32 @ring_space(%struct.TYPE_4__*) #1

declare dso_local i32 @av_fifo_generic_write(i32, i8*, i32, i32 (i8*, i8*, i32)*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
